--- a/settings_dict.json
+++ b/settings_dict.json
@@ -1,6 +1,6 @@
 {
     "token": "ODY3MjEwMjQyOTIzOTU0MjE2.GkNLjY.EoKfdkueoRDLk0EcpcnecQC24rnng2tT8h8ZaE",
-    "prefix": "@@",
+    "prefix": "*",
     "weather": "3ba8a1ea0a5d4a46b1c5097dbb866c39",
     "currency": "f6b541961ba60ba8dc42"
 }
